--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,17 @@
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  display: flex; /* 중앙 정렬을 위해 flexbox 사용 */
+  align-items: center; /* 세로 중앙 정렬 */
+  justify-content:center; /* 가로 중앙 정렬 */
+  min-height:100vh; /* 페이지 높이를 최소화하여 전체 화면 차지 */
 }
 
 .logo {
@@ -39,4 +48,97 @@
 
 .read-the-docs {
   color: #888;
+}
+
+ nav {
+   font-size: 12pt;
+   font-family: 'PT Sans', Arial, Sans-serif;
+   position:relative;
+   width:100%;
+ }
+
+nav ul{
+  padding: 0;
+  margin: 0 auto;
+  width: auto;
+  display: flex; /* 아이템들을 행으로 배치하기 위해 flexbox 사용 */
+}
+nav li{
+}
+nav a{
+  line-height: 50px;
+  height: 50px;
+}
+nav li a{
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+}
+nav li:last-child a{
+  border-right: 0;
+}
+nav a:hover, nav a:active{
+}
+nav a#pull{
+  display: none;
+}
+html {
+  -webkit-touch-callout:none;
+  -webkit-user-select:none;
+  -webkit-tap-highlight-color:rgba(0, 0, 0, 0);
+}
+
+ul{
+  /*list-style-type: none;*/
+  margin: 0;
+  padding: 0;
+  background-color: #14a4d7;
+  text-align: center;
+}
+li{
+  /*position: relative;*/
+  display: inline-block;
+}
+li a{
+  color: #FFFFFF;
+  text-align: center;
+  padding: 14.5px 16px;
+  text-decoration: none;
+}
+li a:hover{
+  color: #FFD400;
+  font-weight:bold;
+  transition-property: transform;
+  transition-duration: 0.5s;
+  transform: scale(1.5);
+}
+.menu {
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  background-position: center;
+  background-size: cover;
+  background-color: #389bda;
+  color: white;
+  position: absolute;
+  top: 0;
+}
+
+.buttonfont {
+  font-size: 13pt;
+
+  font-weight: initial;
+}
+
+.titlefont {
+  font-size: 20pt;
+  font-family: "Cafe24Ssurround";
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'Cafe24Ssurround';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Cafe24Ssurround.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
